--- a/style.css
+++ b/style.css
@@ -1,4 +1,48 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
+}
+
+.header {
+    background-image: url("./images/banner3.png");
+    background-repeat: no-repeat;
+    height: 808px;
+    width: 1600px;
+}
+
+.header-section {
+    margin-left: auto;
+    margin-right: 0;
+    text-align: right;
+    padding-right: 100px;
+    padding-top: 216px;
+    width: 35%;
+    color: #FFFFFF;
+}
+
+.header-section h1 {
+    font-size: 65px;
+    line-height: 76px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+.header-section p {
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+.header-section button {
+    color: #005FAC;
+    padding: 21px 26px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+
 }
