--- a/style.css
+++ b/style.css
@@ -1,48 +1,92 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Work Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Work Sans", sans-serif;
 }
 
+/*------------------------ Header Styles -------------------------*/
 .header {
-    background-image: url("./images/banner3.png");
-    background-repeat: no-repeat;
-    height: 808px;
-    width: 1600px;
+  background-image: url("./images/banner3.png");
+  background-repeat: no-repeat;
+  height: 808px;
+  width: 1600px;
 }
 
 .header-section {
-    margin-left: auto;
-    margin-right: 0;
-    text-align: right;
-    padding-right: 100px;
-    padding-top: 216px;
-    width: 35%;
-    color: #FFFFFF;
+  margin-left: auto;
+  margin-right: 0;
+  text-align: right;
+  padding-right: 100px;
+  padding-top: 216px;
+  width: 35%;
+  color: #ffffff;
 }
 
 .header-section h1 {
-    font-size: 65px;
-    line-height: 76px;
-    margin-bottom: 10px;
-    font-weight: 700;
+  font-size: 65px;
+  line-height: 76px;
+  margin-bottom: 10px;
+  font-weight: 700;
 }
 
 .header-section p {
-    font-size: 16px;
-    line-height: 26px;
-    font-weight: 400;
-    margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
 .header-section button {
-    color: #005FAC;
-    padding: 21px 26px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
+  color: #005fac;
+  padding: 21px 26px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+}
 
+/* ------------------------ Main Styles -------------------------- */
+.failure-section {
+  display: flex;
+  align-items: center;
+  gap: 87px;
+  margin: 131px 322px 129px 206px;
+}
+
+.failure-section .failure-div-2 h1 {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  color: #151414;
+  margin-bottom: 24px;
+}
+
+.failure-section .failure-div-2 p {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #444343;
+  margin-bottom: 16px;
+}
+
+.failure-check-1 i,
+.failure-check-2 i,
+.failure-check-3 i,
+.failure-check-4 i,
+.failure-check-5 i {
+  color: #18d887;
+}
+
+.failure-check-1,
+.failure-check-2,
+.failure-check-3,
+.failure-check-4,
+.failure-check-5 {
+  margin-bottom: 8px;
 }
